deploy-monitoring/bases/tracing-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: tracing-lb
spec:
  type: LoadBalancer
  selector:
    app: opentelemetry
    component: otel-collector
  ports:
    -
      name: zipkin
      port: 9411
      targetPort: 9411
    -
      name: c-tchan-thrft
      port: 14267
      targetPort: 14267
    -
      name: c-binary-thrft
      port: 14268
      targetPort: 14268
    -
      name: opencensus
      port: 55678
      targetPort: 55678
