deploy-monitoring/bases/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts: [ "*" ]
    port:
      number: 80
      name: http
      protocol: HTTP
